Revision history for Class-Tiny

{{$NEXT}}

0.006     2013-09-05 11:56:48 America/New_York

    [ADDED]

    - added introspection method: get_all_attribute_defaults_for($class)

    [DOCUMENTED]

    - Fixed TOBYINK email address for contributors list

    - Revised rationale for why Class::Tiny vs other modules

0.005     2013-08-28 11:51:37 America/New_York

    [ADDED]

    - Attributes now support lazy defaults passed as a hash reference
      to the class declaration

0.004     2013-08-21 16:38:01 America/New_York

    [CHANGED]

    - Base class is now Class::Tiny::Object; Class::Tiny is now only the
      class builder

    - BUILD and DEMOLISH now have Moo(se) like semantics: BUILD gets
      original constructor arguments. DEMOLISH is now passed a global
      destruction flag (requires Devel::GlobalDestruction on Perls before
      v5.14)

    - Constructor argument validation now happens after BUILD.

    - Constructor argument validation has been softened to a heuristic:
      argument names must match a method name

    [ADDED]

    - added introspection method: get_all_attributes_for($class)

    [INTERNAL]

    - Refactored import() for easier subclassing of Class::Tiny should
      anyone be crazy enough to do so

0.003     2013-08-19 19:43:36 America/New_York

    [FIXED]

    - Multiple invocations of "use Class::Tiny" in a package accumulate
      attributes instead of overwriting them

0.002     2013-08-19 17:17:24 America/New_York

    [CHANGED]

    - Slight reduction in memory usage tracking attributes

0.001     2013-08-16 10:48:33 America/New_York

    - First release
